--- a/src/components/MainPage/MainPage.css
+++ b/src/components/MainPage/MainPage.css
@@ -5,7 +5,6 @@
 
 .container.mainpage {
   margin-top: 86px;
-  padding: 10px;
 }
 
 .mainPageImageContainer {
